--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li><a href="#" onclick="filterProducts('all')">All Products</a></li>
-                        <li><a href="#" onclick="filterProducts('electronics')">Electronics</a></li>
-                        <li><a href="#" onclick="filterProducts('clothing')">Clothing</a></li>
-                        <li><a href="#" onclick="filterProducts('home')">Home & Garden</a></li>
-                        <li><a href="#" onclick="filterProducts('sports')">Sports</a></li>
+                        <li><a href="#" class="nav-link">Home</a></li>
+                        <li><a href="#" class="nav-link">About</a></li>
+                        <li><a href="#" class="nav-link">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="header-actions">
@@ -31,7 +29,7 @@
                         <input type="text" id="searchInput" placeholder="Search products..." class="search-input">
                         <button class="search-btn">🔍</button>
                     </div>
-                    <button class="auth-btn" onclick="toggleAuthModal()">Sign In</button>
+                    <button class="auth-btn" onclick="toggleAuthModal()">Login</button>
                     <button class="cart-btn" onclick="toggleCart()">
                         🛒 Cart (<span id="cartCount">0</span>)
                     </button>
@@ -46,7 +44,7 @@
             <div class="hero-content">
                 <h2>Welcome to CloudTech Store</h2>
                 <p>Discover amazing products with secure cloud-based shopping experience</p>
-                <button class="cta-btn" onclick="document.getElementById('products').scrollIntoView()">Shop Now</button>
+                <button class="cta-btn" onclick="scrollToProducts()">Shop Now</button>
             </div>
         </div>
     </section>
@@ -100,57 +98,127 @@
     <div id="authModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="toggleAuthModal()">&times;</span>
-            <div class="auth-container">
-                <div class="auth-tabs">
-                    <button class="tab-btn active" onclick="switchTab('signin')">Sign In</button>
-                    <button class="tab-btn" onclick="switchTab('signup')">Sign Up</button>
-                </div>
-                <form id="signinForm" class="auth-form">
-                    <h3>Sign In</h3>
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
-                    <button type="submit">Sign In</button>
-                </form>
-                <form id="signupForm" class="auth-form hidden">
-                    <h3>Sign Up</h3>
-                    <input type="text" placeholder="Full Name" required>
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Password" required>
-                    <input type="password" placeholder="Confirm Password" required>
-                    <button type="submit">Sign Up</button>
-                </form>
+            <div id="authTabs">
+                <button class="tab-btn active" onclick="switchTab('login')">Login</button>
+                <button class="tab-btn" onclick="switchTab('signup')">Sign Up</button>
+                <button class="tab-btn" onclick="switchTab('admin')">Admin</button>
             </div>
+            
+            <form id="loginForm" class="auth-form" onsubmit="handleLogin(event)">
+                <div class="form-group">
+                    <label for="loginEmail">Email</label>
+                    <input type="email" id="loginEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">Password</label>
+                    <input type="password" id="loginPassword" required>
+                </div>
+                <button type="submit" class="submit-btn">Login</button>
+            </form>
+
+            <form id="signupForm" class="auth-form hidden" onsubmit="handleSignup(event)">
+                <div class="form-group">
+                    <label for="signupName">Name</label>
+                    <input type="text" id="signupName" required>
+                </div>
+                <div class="form-group">
+                    <label for="signupEmail">Email</label>
+                    <input type="email" id="signupEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="signupPassword">Password</label>
+                    <input type="password" id="signupPassword" required>
+                </div>
+                <button type="submit" class="submit-btn">Sign Up</button>
+            </form>
+
+            <form id="adminForm" class="auth-form hidden" onsubmit="handleAdminLogin(event)">
+                <div class="form-group">
+                    <label for="adminEmail">Admin Email</label>
+                    <input type="email" id="adminEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="adminPassword">Admin Password</label>
+                    <input type="password" id="adminPassword" required>
+                </div>
+                <button type="submit" class="submit-btn">Admin Login</button>
+            </form>
         </div>
+    </div>
+
+    <div id="userInfo" class="user-info" style="display: none;">
+        <span>Welcome, <span id="userName"></span></span>
+        <button onclick="logout()">Logout</button>
     </div>
 
     <!-- Checkout Modal -->
     <div id="checkoutModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeCheckout()">&times;</span>
+            <span class="close" onclick="document.getElementById('checkoutModal').style.display = 'none'">&times;</span>
+            <h2>Checkout</h2>
             <div class="checkout-container">
-                <h3>Checkout</h3>
-                <form id="checkoutForm">
-                    <div class="form-section">
-                        <h4>Shipping Information</h4>
-                        <input type="text" placeholder="Full Name" required>
-                        <input type="text" placeholder="Address" required>
-                        <input type="text" placeholder="City" required>
-                        <div class="form-row">
-                            <input type="text" placeholder="State" required>
-                            <input type="text" placeholder="ZIP Code" required>
+                <div class="checkout-form">
+                    <h3>Shipping Information</h3>
+                    <form id="checkoutForm" onsubmit="handleCheckout(event)">
+                        <div class="form-group">
+                            <label for="fullName">Full Name</label>
+                            <input type="text" id="fullName" required>
                         </div>
-                    </div>
-                    <div class="form-section">
-                        <h4>Payment Information</h4>
-                        <input type="text" placeholder="Card Number" required>
-                        <div class="form-row">
-                            <input type="text" placeholder="MM/YY" required>
-                            <input type="text" placeholder="CVC" required>
+                        <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" id="address" required>
                         </div>
-                        <input type="text" placeholder="Cardholder Name" required>
+                        <div class="form-group">
+                            <label for="city">City</label>
+                            <input type="text" id="city" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="zipCode">ZIP Code</label>
+                            <input type="text" id="zipCode" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="cardNumber">Card Number</label>
+                            <input type="text" id="cardNumber" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="expiryDate">Expiry Date</label>
+                            <input type="text" id="expiryDate" placeholder="MM/YY" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="cvv">CVV</label>
+                            <input type="text" id="cvv" required>
+                        </div>
+                        <button type="submit" class="submit-btn">Place Order</button>
+                    </form>
+                </div>
+                <div class="checkout-summary">
+                    <h3>Order Summary</h3>
+                    <div id="checkoutItems" class="checkout-items">
+                        <!-- Items will be added here -->
                     </div>
-                    <button type="submit" class="place-order-btn">Place Order</button>
-                </form>
+                    <div class="checkout-total">
+                        <span>Total:</span>
+                        <span id="checkoutTotal">$0.00</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Cart Modal -->
+    <div id="cartModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="toggleCart()">&times;</span>
+            <h2>Your Cart</h2>
+            <div class="cart-container">
+                <div id="cartItems">
+                    <!-- Cart items will be added here -->
+                </div>
+                <div class="cart-total">
+                    <span>Total:</span>
+                    <span id="cartTotal">$0.00</span>
+                </div>
+                <button id="proceedToCheckout" class="checkout-btn" onclick="proceedToCheckout()">Proceed to Checkout</button>
             </div>
         </div>
     </div>
